--- a/STITCH/NAMESPACE
+++ b/STITCH/NAMESPACE
@@ -5,6 +5,8 @@ export(cpp_cigar_split)
 export(cpp_read_reassign)
 export(forwardBackwardDiploid)
 export(forwardBackwardHaploid)
+export(get_header_using_SeqLib)
+export(get_sample_data_from_SeqLib)
 export(increment2N)
 export(pseudoHaploid_update_model_9)
 export(reformatReads)
