Allow for imputation from reference panels with niterations=1

--- a/STITCH/NAMESPACE
+++ b/STITCH/NAMESPACE
@@ -12,5 +12,6 @@ export(get_sampleReadsRaw_from_SeqLib)
 export(get_sample_data_from_SeqLib)
 export(increment2N)
 export(pseudoHaploid_update_model_9)
+export(rcpp_make_sampleReads_from_hap)
 importFrom(Rcpp,sourceCpp)
 useDynLib(STITCH)
