--- a/STITCH/NAMESPACE
+++ b/STITCH/NAMESPACE
@@ -16,6 +16,7 @@ export(increment2N)
 export(pseudoHaploid_update_model_9)
 export(rcpp_calculate_hwe_p)
 export(rcpp_calculate_many_likelihoods)
+export(rcpp_get_update_pieces)
 export(rcpp_make_eMatHap_t)
 export(rcpp_make_sampleReads_from_hap)
 export(rcpp_sample_multiple_paths)
