Updates to heuristic and diploid-inbred

--- a/STITCH/NAMESPACE
+++ b/STITCH/NAMESPACE
@@ -20,6 +20,7 @@ export(rcpp_get_update_pieces)
 export(rcpp_make_column_of_vcf)
 export(rcpp_make_eMatHap_t)
 export(rcpp_make_sampleReads_from_hap)
+export(rcpp_make_smoothed_rate)
 export(rcpp_sample_multiple_paths)
 export(rcpp_sample_path)
 export(sample_diploid_path)
