Start to introduce ability to run forward backward in chunks. Re-factor C++ code for readability

--- a/STITCH/NAMESPACE
+++ b/STITCH/NAMESPACE
@@ -12,6 +12,7 @@ export(get_read_span)
 export(get_sampleReadsRaw_from_SeqLib)
 export(get_sample_data_from_SeqLib)
 export(increment2N)
+export(make_and_bound_eMat_t)
 export(pseudoHaploid_update_model_9)
 export(rcpp_calculate_fbd_dosage)
 export(rcpp_calculate_hwe_p)
