--- a/STITCH/NAMESPACE
+++ b/STITCH/NAMESPACE
@@ -12,12 +12,12 @@ export(get_read_span)
 export(get_sampleReadsRaw_from_SeqLib)
 export(get_sample_data_from_SeqLib)
 export(increment2N)
-export(make_and_bound_eMat_t)
 export(pseudoHaploid_update_model_9)
 export(rcpp_calculate_fbd_dosage)
 export(rcpp_calculate_hwe_p)
 export(rcpp_calculate_many_likelihoods)
 export(rcpp_get_update_pieces)
+export(rcpp_make_and_bound_eMat_t)
 export(rcpp_make_column_of_vcf)
 export(rcpp_make_diploid_jUpdate)
 export(rcpp_make_eMatHap_t)
