Update per-sample in place and re-use alphaBeta

--- a/STITCH/NAMESPACE
+++ b/STITCH/NAMESPACE
@@ -14,10 +14,10 @@ export(get_sample_data_from_SeqLib)
 export(increment2N)
 export(make_haploid_gammaUpdate_t)
 export(pseudoHaploid_update_model_9)
+export(ram_test)
 export(rcpp_calculate_fbd_dosage)
 export(rcpp_calculate_hwe_p)
 export(rcpp_calculate_many_likelihoods)
-export(rcpp_get_update_pieces)
 export(rcpp_make_and_bound_eMat_t)
 export(rcpp_make_column_of_vcf)
 export(rcpp_make_diploid_jUpdate)
