Add rough extraction script

--- a/STITCH/NAMESPACE
+++ b/STITCH/NAMESPACE
@@ -5,6 +5,7 @@ export(collapse_diploid_gamma)
 export(cpp_cigar_split_many)
 export(cpp_deal_with_soft_clipped_bases)
 export(cpp_read_reassign)
+export(extract_hd_to_cube)
 export(forwardBackwardDiploid)
 export(forwardBackwardHaploid)
 export(get_header_using_SeqLib)
