Properly get read starts, ends in sampleReadsInfo

--- a/STITCH/NAMESPACE
+++ b/STITCH/NAMESPACE
@@ -20,6 +20,7 @@ export(generate_or_refactor_input)
 export(get_and_validate_pos_gen_and_phase)
 export(get_bundling_position_information)
 export(get_header_using_SeqLib)
+export(get_min_from_position)
 export(get_output_filename)
 export(get_random_values)
 export(get_read_span)
