--- a/STITCH/NAMESPACE
+++ b/STITCH/NAMESPACE
@@ -36,6 +36,7 @@ export(make_acceptance_test_data_package)
 export(make_fb_test_package)
 export(make_gammaEK_t_from_gammaK_t)
 export(make_haploid_gammaUpdate_t)
+export(make_reference_package)
 export(make_unique_tempdir)
 export(match_gen_and_phase_to_samples)
 export(pseudoHaploid_update_model_9)
