Export time filenames

--- a/STITCH/NAMESPACE
+++ b/STITCH/NAMESPACE
@@ -12,6 +12,7 @@ export(cpp_deal_with_soft_clipped_bases)
 export(cpp_read_reassign)
 export(downsampleToFraction)
 export(extract_hd_to_cube)
+export(file_date)
 export(file_sampleReads)
 export(file_sampleReadsInfo)
 export(forwardBackwardDiploid)
