--- a/STITCH/NAMESPACE
+++ b/STITCH/NAMESPACE
@@ -53,12 +53,12 @@ export(rcpp_make_eMatHap_t)
 export(rcpp_make_fb_snp_offsets)
 export(rcpp_make_sampleReads_from_hap)
 export(rcpp_make_smoothed_rate)
-export(rcpp_sample_multiple_paths)
 export(rcpp_sample_path)
 export(remove_buffer_from_variables)
 export(sample_diploid_path)
 export(shrinkReads)
 export(shrink_region)
+export(test_eHaps_options)
 export(validate_bamlist_and_cramlist_for_input_generation)
 export(validate_chr)
 export(validate_downsampleFraction)
