--- a/STITCH/NAMESPACE
+++ b/STITCH/NAMESPACE
@@ -45,11 +45,11 @@ export(ram_test)
 export(rcpp_calculate_fbd_dosage)
 export(rcpp_calculate_hwe_p)
 export(rcpp_calculate_many_likelihoods)
-export(rcpp_make_and_bound_eMat_t)
+export(rcpp_make_and_bound_eMatGrid_diploid_t)
 export(rcpp_make_column_of_vcf)
 export(rcpp_make_diploid_jUpdate)
-export(rcpp_make_eMatHapSNP_t)
-export(rcpp_make_eMatHap_t)
+export(rcpp_make_eMatGrid_t)
+export(rcpp_make_eMatRead_t)
 export(rcpp_make_fb_snp_offsets)
 export(rcpp_make_sampleReads_from_hap)
 export(rcpp_make_smoothed_rate)
