--- a/STITCH/NAMESPACE
+++ b/STITCH/NAMESPACE
@@ -43,6 +43,7 @@ export(match_gen_and_phase_to_samples)
 export(pseudoHaploid_update_model_9)
 export(ram_test)
 export(rcpp_calculate_fbd_dosage)
+export(rcpp_calculate_hapDosage)
 export(rcpp_calculate_hwe_p)
 export(rcpp_make_and_bound_eMatGrid_diploid_t)
 export(rcpp_make_column_of_vcf)
