Have temporary test package working. Passess acceptance tests too

--- a/STITCH/NAMESPACE
+++ b/STITCH/NAMESPACE
@@ -54,6 +54,7 @@ export(rcpp_make_fb_snp_offsets)
 export(rcpp_make_sampleReads_from_hap)
 export(rcpp_make_smoothed_rate)
 export(rcpp_sample_path)
+export(reference_fbh)
 export(remove_buffer_from_variables)
 export(sample_diploid_path)
 export(shrinkReads)
