--- a/STITCH/NAMESPACE
+++ b/STITCH/NAMESPACE
@@ -53,6 +53,7 @@ export(rcpp_make_eMatRead_t)
 export(rcpp_make_fb_snp_offsets)
 export(rcpp_make_sampleReads_from_hap)
 export(rcpp_make_smoothed_rate)
+export(rcpp_ref_make_eMatGrid_t)
 export(rcpp_sample_path)
 export(reference_fbh)
 export(remove_buffer_from_variables)
