Getting close to done I think

--- a/STITCH/NAMESPACE
+++ b/STITCH/NAMESPACE
@@ -48,6 +48,7 @@ export(rcpp_calculate_fbd_dosage)
 export(rcpp_calculate_hapDosage)
 export(rcpp_calculate_hwe_p)
 export(rcpp_finalize_alphaMatSum_tc)
+export(rcpp_make_alphaMatSumX_tc)
 export(rcpp_make_and_bound_eMatGrid_diploid_t)
 export(rcpp_make_column_of_vcf)
 export(rcpp_make_diploid_jUpdate)
