Change reference_haps to operate only on defined SNPs

--- a/STITCH/NAMESPACE
+++ b/STITCH/NAMESPACE
@@ -6,6 +6,7 @@ export(Rcpp_run_backward_haploid)
 export(Rcpp_run_forward_haploid)
 export(STITCH)
 export(buildAlleleCount)
+export(calc_dist_between_rhb_t_and_hap)
 export(calculate_pse)
 export(collapse_diploid_gamma)
 export(convertScaledBQtoProbs)
@@ -31,6 +32,7 @@ export(get_sampleReadsRaw_from_SeqLib)
 export(get_sample_data_from_SeqLib)
 export(get_sample_names)
 export(increment2N)
+export(inflate_fhb_t)
 export(initialize_chrStart_and_chrEnd)
 export(initialize_directories)
 export(load_all_sampleReads_into_memory)
@@ -48,6 +50,7 @@ export(rcpp_calculate_fbd_dosage)
 export(rcpp_calculate_hapDosage)
 export(rcpp_calculate_hwe_p)
 export(rcpp_finalize_alphaMatSum_tc)
+export(rcpp_int_expand)
 export(rcpp_make_alphaMatSumX_tc)
 export(rcpp_make_and_bound_eMatGrid_diploid_t)
 export(rcpp_make_column_of_vcf)
