Switch to rhb throughout. Seems to work

--- a/STITCH/NAMESPACE
+++ b/STITCH/NAMESPACE
@@ -33,6 +33,7 @@ export(get_sampleReadsRaw_from_SeqLib)
 export(get_sample_data_from_SeqLib)
 export(get_sample_names)
 export(increment2N)
+export(inflate_fhb)
 export(inflate_fhb_t)
 export(initialize_chrStart_and_chrEnd)
 export(initialize_directories)
@@ -51,6 +52,7 @@ export(rcpp_calculate_fbd_dosage)
 export(rcpp_calculate_hapDosage)
 export(rcpp_calculate_hwe_p)
 export(rcpp_finalize_alphaMatSum_tc)
+export(rcpp_int_contract)
 export(rcpp_int_expand)
 export(rcpp_make_alphaMatSumX_tc)
 export(rcpp_make_and_bound_eMatGrid_diploid_t)
