put determine_where_to_stop into cpp

--- a/STITCH/NAMESPACE
+++ b/STITCH/NAMESPACE
@@ -51,6 +51,7 @@ export(ram_test)
 export(rcpp_calculate_fbd_dosage)
 export(rcpp_calculate_hapDosage)
 export(rcpp_calculate_hwe_p)
+export(rcpp_determine_where_to_stop)
 export(rcpp_finalize_alphaMatSum_tc)
 export(rcpp_int_contract)
 export(rcpp_int_expand)
