--- a/STITCH/NAMESPACE
+++ b/STITCH/NAMESPACE
@@ -6,6 +6,7 @@ export(Rcpp_rhb_reader_chunk_process)
 export(Rcpp_run_backward_haploid)
 export(Rcpp_run_forward_haploid)
 export(STITCH)
+export(assign_positions_to_grid)
 export(buildAlleleCount)
 export(calc_dist_between_rhb_t_and_hap)
 export(calculate_pse)
@@ -22,8 +23,11 @@ export(file_sampleReadsInfo)
 export(forwardBackwardDiploid)
 export(forwardBackwardHaploid)
 export(generate_or_refactor_input)
+export(getSampleRange)
+export(get_and_validate_genetic_map)
 export(get_and_validate_pos_gen_and_phase)
 export(get_bundling_position_information)
+export(get_haplotypes_from_reference)
 export(get_header_using_SeqLib)
 export(get_min_from_position)
 export(get_output_filename)
@@ -32,20 +36,28 @@ export(get_read_span)
 export(get_sampleReadsRaw_from_SeqLib)
 export(get_sample_data_from_SeqLib)
 export(get_sample_names)
+export(get_transMatRate_m)
 export(increment2N)
 export(inflate_fhb)
 export(inflate_fhb_t)
+export(inflate_fhb_t_in_place)
 export(initialize_chrStart_and_chrEnd)
 export(initialize_directories)
+export(int_expand)
+export(loadBamAndConvert)
 export(load_all_sampleReads_into_memory)
+export(load_validate_and_match_genetic_map)
 export(make_STITCH_cli)
 export(make_acceptance_test_data_package)
 export(make_fb_test_package)
 export(make_gammaEK_t_from_gammaK_t)
+export(make_genetic_map_file)
 export(make_haploid_gammaUpdate_t)
 export(make_reference_package)
+export(make_rhb_t_from_rhi_t)
 export(make_unique_tempdir)
 export(match_gen_and_phase_to_samples)
+export(match_genetic_map_to_L)
 export(pseudoHaploid_update_model_9)
 export(ram_test)
 export(rcpp_calculate_fbd_dosage)
@@ -74,13 +86,17 @@ export(remove_buffer_from_variables)
 export(sample_diploid_path)
 export(shrinkReads)
 export(shrink_region)
+export(snap_sampleReads_to_grid)
 export(test_eHaps_options)
 export(validate_bamlist_and_cramlist_for_input_generation)
 export(validate_chr)
 export(validate_downsampleFraction)
 export(validate_nCores)
+export(validate_nGen)
+export(validate_output_filename)
 export(validate_outputdir)
 export(validate_posfile)
+export(validate_reference_files)
 export(validate_regionStart_regionEnd_and_buffer)
 export(validate_tempdir)
 export(validate_vcf_output_name)
