--- a/STITCH/NAMESPACE
+++ b/STITCH/NAMESPACE
@@ -10,6 +10,8 @@ export(assign_positions_to_grid)
 export(buildAlleleCount)
 export(calc_dist_between_rhb_t_and_hap)
 export(calculate_pse)
+export(check_program_dependency)
+export(check_vcf_info_scores)
 export(collapse_diploid_gamma)
 export(convertScaledBQtoProbs)
 export(cpp_cigar_split_many)
@@ -22,6 +24,7 @@ export(file_sampleReads)
 export(file_sampleReadsInfo)
 export(forwardBackwardDiploid)
 export(forwardBackwardHaploid)
+export(generate_hwe_on_counts)
 export(generate_or_refactor_input)
 export(getSampleRange)
 export(get_and_validate_genetic_map)
@@ -29,6 +32,7 @@ export(get_and_validate_pos_gen_and_phase)
 export(get_bundling_position_information)
 export(get_haplotypes_from_reference)
 export(get_header_using_SeqLib)
+export(get_max_gen_rapid)
 export(get_min_from_position)
 export(get_output_filename)
 export(get_random_values)
