--- a/STITCH/NAMESPACE
+++ b/STITCH/NAMESPACE
@@ -68,6 +68,7 @@ export(rcpp_calculate_fbd_dosage)
 export(rcpp_calculate_hapDosage)
 export(rcpp_calculate_hwe_p)
 export(rcpp_determine_where_to_stop)
+export(rcpp_evaluate_bxtag)
 export(rcpp_finalize_alphaMatSum_tc)
 export(rcpp_int_contract)
 export(rcpp_int_expand)
