--- a/STITCH/NAMESPACE
+++ b/STITCH/NAMESPACE
@@ -40,6 +40,7 @@ export(get_read_span)
 export(get_sampleReadsRaw_from_SeqLib)
 export(get_sample_data_from_SeqLib)
 export(get_sample_names)
+export(get_sample_names_from_bam_or_cram_files)
 export(get_transMatRate_m)
 export(increment2N)
 export(inflate_fhb)
