--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,8 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+         with:
+           submodules: recursive
  
       - name: Manually install dependency
         run: sudo apt-get update -y && sudo apt-get install -y libcurl4-openssl-dev && which pkg-config
