update dependency in workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
           submodules: recursive
  
       - name: Manually install dependency
-        run: sudo apt-get update -y && sudo apt-get install -y libcurl4-openssl-dev && which pkg-config
+        run: sudo apt-get update -y && sudo apt-get install -y libcurl4-openssl-dev && sudo apt-get install -y libharfbuzz-dev && sudo apt-get install -y libfribidi-dev && which pkg-config
 
       - uses: r-lib/actions/setup-r@v1
         with:
