--- a/STITCH/NAMESPACE
+++ b/STITCH/NAMESPACE
@@ -38,6 +38,7 @@ export(get_min_from_position)
 export(get_output_filename)
 export(get_random_values)
 export(get_read_span)
+export(get_rhb_from_vcf)
 export(get_sampleReadsRaw_from_SeqLib)
 export(get_sample_data_from_SeqLib)
 export(get_sample_names)
