--- a/STITCH/NAMESPACE
+++ b/STITCH/NAMESPACE
@@ -32,6 +32,7 @@ export(get_and_validate_genetic_map)
 export(get_and_validate_pos_gen_and_phase)
 export(get_bundling_position_information)
 export(get_haplotypes_from_reference)
+export(get_haplotypes_from_vcf)
 export(get_header_using_SeqLib)
 export(get_max_gen_rapid)
 export(get_min_from_position)
