add syllable pbwt

--- a/STITCH/NAMESPACE
+++ b/STITCH/NAMESPACE
@@ -100,6 +100,9 @@ export(sample_diploid_path)
 export(shrinkReads)
 export(shrink_region)
 export(snap_sampleReads_to_grid)
+export(sypbwt_build)
+export(sypbwt_load)
+export(sypbwt_report)
 export(test_eHaps_options)
 export(validate_bamlist_and_cramlist_for_input_generation)
 export(validate_chr)
