--- a/STITCH/NAMESPACE
+++ b/STITCH/NAMESPACE
@@ -109,6 +109,7 @@ export(validate_outputdir)
 export(validate_posfile)
 export(validate_reference_files)
 export(validate_regionStart_regionEnd_and_buffer)
+export(validate_region_to_impute_when_using_regionStart)
 export(validate_tempdir)
 export(validate_vcf_output_name)
 importFrom(Rcpp,sourceCpp)
