--- a/STITCH/NAMESPACE
+++ b/STITCH/NAMESPACE
@@ -68,6 +68,9 @@ export(make_simple_bam)
 export(make_unique_tempdir)
 export(match_gen_and_phase_to_samples)
 export(match_genetic_map_to_L)
+export(mspbwt_build)
+export(mspbwt_load)
+export(mspbwt_report)
 export(pseudoHaploid_update_model_9)
 export(ram_test)
 export(rcpp_calculate_fbd_dosage)
