build mspbwt and rhb in one goal

--- a/STITCH/NAMESPACE
+++ b/STITCH/NAMESPACE
@@ -72,6 +72,7 @@ export(mspbwt_build)
 export(mspbwt_load)
 export(mspbwt_report)
 export(pseudoHaploid_update_model_9)
+export(quilt_mspbwt_build)
 export(ram_test)
 export(rcpp_calculate_fbd_dosage)
 export(rcpp_calculate_hapDosage)
