be able to do order

--- a/STITCH/NAMESPACE
+++ b/STITCH/NAMESPACE
@@ -52,6 +52,7 @@ export(inflate_fhb_t)
 export(inflate_fhb_t_in_place)
 export(initialize_chrStart_and_chrEnd)
 export(initialize_directories)
+export(int_determine_rspo)
 export(int_expand)
 export(loadBamAndConvert)
 export(load_all_sampleReads_into_memory)
