--- a/STITCH/NAMESPACE
+++ b/STITCH/NAMESPACE
@@ -69,11 +69,7 @@ export(make_simple_bam)
 export(make_unique_tempdir)
 export(match_gen_and_phase_to_samples)
 export(match_genetic_map_to_L)
-export(mspbwt_build)
-export(mspbwt_load)
-export(mspbwt_report)
 export(pseudoHaploid_update_model_9)
-export(quilt_mspbwt_build)
 export(ram_test)
 export(rcpp_calculate_fbd_dosage)
 export(rcpp_calculate_hapDosage)
@@ -98,6 +94,7 @@ export(rcpp_sample_path)
 export(ref_make_ehh)
 export(ref_make_haploid_gammaUpdate_t)
 export(reference_fbh)
+export(removeTmpSamplesFile)
 export(remove_buffer_from_variables)
 export(sample_diploid_path)
 export(shrinkReads)
