--- a/STITCH/NAMESPACE
+++ b/STITCH/NAMESPACE
@@ -64,6 +64,7 @@ export(make_gammaEK_t_from_gammaK_t)
 export(make_genetic_map_file)
 export(make_haploid_gammaUpdate_t)
 export(make_reference_package)
+export(make_rhb_t_equality)
 export(make_rhb_t_from_rhi_t)
 export(make_simple_bam)
 export(make_unique_tempdir)
