--- a/.github/workflows/check-release.yaml
+++ b/.github/workflows/check-release.yaml
@@ -9,12 +9,13 @@ on:
   pull_request:
     branches: [master]
 
+defaults:
+  run:
+    working-directory: ./STITCH
+
 jobs:
   R-CMD-check:
     runs-on: ${{ matrix.config.os }}
-    defaults:
-      run:
-        working-directory: ./STITCH
 
     name: ${{ matrix.config.os }} (${{ matrix.config.r }})
 
@@ -33,6 +34,8 @@ jobs:
       
     steps:
       - uses: actions/checkout@v3
+        with:
+          submodules: recursive
 
       - uses: r-lib/actions/setup-r@v2
         with:
@@ -44,6 +47,9 @@ jobs:
         with:
           extra-packages: any::rcmdcheck
           needs: check
+
+      - name: Install suggested dependencies
+        run: R -s -e  'install.packages("https://github.com/rwdavies/rrbgen/raw/master/releases/rrbgen_0.0.4.tar.gz", repos=NULL)'
 
       - uses: r-lib/actions/check-r-package@v2
         with:
