--- a/STITCH/DESCRIPTION
+++ b/STITCH/DESCRIPTION
@@ -29,12 +29,11 @@ Getting started: A minimum run requires the following options to be
         pseudoHaploid mode, what iteration to switch from pseudoHaploid
         to diploid (switchModelIteration).
 Depends: parallel
-Suggests: rrbgen (>= 0.0.4)
 Imports: Rcpp, data.table
+Suggests: testthat, rrbgen (>= 0.0.4)
 LinkingTo: Rcpp, RcppArmadillo
 Packaged: 2017-02-14 13:27:59 UTC; rdavies
 RoxygenNote: 7.3.1
 License: GPL | file LICENSE
 SystemRequirements: C++11
 NeedsCompilation: yes
-Suggests: testthat
