--- a/STITCH/DESCRIPTION
+++ b/STITCH/DESCRIPTION
@@ -28,8 +28,8 @@ Getting started: A minimum run requires the following options to be
         diploid or pseudoHaploid mode (method), and if run in
         pseudoHaploid mode, what iteration to switch from pseudoHaploid
         to diploid (switchModelIteration).
-Depends: R (>= 3.6.0)
-Imports: Rcpp, data.table, parallel
+Depends: R (>= 3.6.0), parallel
+Imports: Rcpp, data.table
 Suggests: testthat, rrbgen (>= 0.0.4)
 Remotes: github::rwdavies/rrbgen/rrbgen
 LinkingTo: Rcpp, RcppArmadillo
