--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,8 +40,7 @@ jobs:
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
           working-directory: ./STITCH
-          extra-packages: any::rcmdcheck
-          needs: check
+          extra-packages: devtools,testthat,optparse
 
       - name: Install dependencies
         run:  export MAKE="make -j6" && sudo bash ./scripts/install-dependencies.sh
