--- a/STITCH/DESCRIPTION
+++ b/STITCH/DESCRIPTION
@@ -2,7 +2,7 @@ Package: STITCH
 Type: Package
 Title: STITCH - Sequencing To Imputation Through Constructing
         Haplotypes
-Version: 1.8.0
+Version: 1.8.1
 Date: 2025-05-04
 Author: Robert William Davies
 Maintainer: Robert William Davies <robertwilliamdavies@gmail.com>, Zilong Li <zilong.dk@gmail.com>
@@ -31,8 +31,8 @@ Getting started: A minimum run requires the following options to be
 Depends: R (>= 3.6.0), parallel
 Imports: Rcpp, data.table
 Suggests: testthat, rrbgen (>= 0.0.4)
-Remotes: github::Zilong-Li/vcfppR,github::rwdavies/rrbgen/rrbgen
-LinkingTo: Rcpp, RcppArmadillo, vcfppR (>= 0.7.7)
+Remotes: github::rwdavies/rrbgen/rrbgen
+LinkingTo: Rcpp, RcppArmadillo, vcfppR (>= 0.7.6)
 RoxygenNote: 7.3.2
 License: GPL | file LICENSE
 BugReports: https://github.com/rwdavies/STITCH/issues
