--- a/STITCH/DESCRIPTION
+++ b/STITCH/DESCRIPTION
@@ -1,9 +1,8 @@
 Package: STITCH
 Type: Package
-Title: STITCH - Sequencing To Imputation Through Constructing
-        Haplotypes
+Title: STITCH - Sequencing To Imputation Through Constructing Haplotypes
 Version: 1.8.1
-Date: 2025-05-04
+Date: 2025-05-05
 Author: Robert William Davies
 Maintainer: Robert William Davies <robertwilliamdavies@gmail.com>, Zilong Li <zilong.dk@gmail.com>
 Description: STITCH performs imputation of individuals sequenced to low coverage
