{GL} added option --useIndels, allows (multiallelic) indels (and SNPs) in pos file.  Encoding is as in VCF (single reference allele, at least 1 nucleotide, alts are comma-separated), and validated.  Internally represented as sets of biallelic variants with identical refs and position.  This version DOES NOT WORK, a multi allelic SNP causes 0s in alphaMatSum_tc.  The file function.R has debug statements in, tagged by the string '#printsnps'

--- a/STITCH/NAMESPACE
+++ b/STITCH/NAMESPACE
@@ -71,6 +71,7 @@ export(make_unique_tempdir)
 export(match_gen_and_phase_to_samples)
 export(match_genetic_map_to_L)
 export(pseudoHaploid_update_model_9)
+export(query_region)
 export(ram_test)
 export(rcpp_calculate_fbd_dosage)
 export(rcpp_calculate_hapDosage)
