--- a/STITCH/NAMESPACE
+++ b/STITCH/NAMESPACE
@@ -38,6 +38,7 @@ export(get_header_using_SeqLib)
 export(get_max_gen_rapid)
 export(get_min_from_position)
 export(get_output_filename)
+export(get_pos_from_reference_vcf)
 export(get_random_values)
 export(get_read_span)
 export(get_rhb_from_vcf)
@@ -62,6 +63,7 @@ export(make_acceptance_test_data_package)
 export(make_fb_test_package)
 export(make_gammaEK_t_from_gammaK_t)
 export(make_genetic_map_file)
+export(make_genetic_map_file_from_vcf)
 export(make_haploid_gammaUpdate_t)
 export(make_reference_package)
 export(make_rhb_t_equality)
